<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".uservalidation.ui.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/login_style"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:id="@+id/login_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:paddingStart="5sp"
                android:paddingTop="20dp"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/login_user_email"
                    android:importantForAutofill="yes"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/login_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/login_psw"
                    android:importantForAutofill="yes"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="50sp"
                android:paddingEnd="5dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login_button_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style"
                    android:text="@string/login_button_l"
                    android:textAlignment="center"
                    android:textColor="@color/text_button"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:id="@+id/login_button_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_membership"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_button"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            tools:ignore="UselessLeaf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:textSize="36sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle2"
            android:textAlignment="center"
            android:textSize="28sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</LinearLayout>
