<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:gravity="center"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="8sp"
    android:paddingRight="8sp"
    tools:context=".uservalidation.ui.RegistrationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/reg_label"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/login_style"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/reg_errFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingTop="20sp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_errLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAlignment="textStart" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.8"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical">-->

<!--            <TextView-->
<!--                android:id="@+id/reg_errUserName"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="4dp"-->
<!--                android:textAllCaps="true"-->
<!--                android:textColor="@color/colorAccent"-->
<!--                android:textSize="8sp"-->
<!--                android:textStyle="bold"-->
<!--                tools:ignore="RtlSymmetry,SmallSp" />-->

<!--            <EditText-->
<!--                android:id="@+id/reg_userName"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/reg_username"-->
<!--                android:importantForAutofill="no"-->
<!--                android:inputType="textPersonName"-->
<!--                android:textAlignment="textStart" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_errEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_errEmailValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_emailValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email_conf"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_errPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_pws"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="textStart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reg_errPasswordValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="8sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/reg_passwordValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_pws_conf"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="textStart" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:visibility="visible">

        <Button
            android:id="@+id/reg_button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/global_back"
            tools:ignore="ButtonStyle,NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            tools:ignore="UselessLeaf" />

        <Button
            android:id="@+id/reg_button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/global_continue"
            tools:ignore="ButtonStyle,NestedWeights" />

    </LinearLayout>
</LinearLayout>